# vLLM-Launcher

./: .gitignore  DESIGN.md  LICENSE  README.md  README_zh.md  pyproject.toml  start.sh
backend/: config_store.py  instance_manager.py  log_parser.py  logging_config.py  main.py  metrics_scraper.py  model_scanner.py  process_manager.py  requirements.txt  schemas.py  token_tracker.py  vram_checker.py  websocket_manager.py
backend/routes/: __init__.py  chat.py  docker.py  files.py  gpu.py  instances.py  models.py  settings.py  usage.py  ws.py
backend/tests/: test_api.py  test_config_store.py  test_instance_manager.py  test_log_parser.py  test_metrics_scraper.py  test_model_scanner.py  test_token_tracker.py  test_vram_checker.py
docs/superpowers/plans/: 2026-05-25-vllm-launcher-redesign.md
docs/superpowers/specs/: 2026-05-25-vllm-launcher-redesign.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: client.ts  config.ts  types.ts  usage.ts  websocket.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/components/: APIPlayground.tsx  AnimatedGauge.tsx  ConfigForm.tsx  ErrorBoundary.tsx  FileBrowser.tsx  GPUMonitor.tsx  InstanceCard.tsx  LogViewer.tsx  Modal.tsx  ModelSelector.tsx  PageHeader.tsx  PageTransition.tsx  PresetManager.tsx  Sidebar.tsx  StatusBadge.tsx  VRAMIndicator.tsx
frontend/src/i18n/: en.ts  index.tsx  zh.ts
frontend/src/pages/: Dashboard.tsx  Instances.tsx  Logs.tsx  Playground.tsx  Settings.tsx  UsageStats.tsx
(+2 files in other folders)
